Added tmux theme.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,35 @@ if-shell "tmux -V | awk '{exit !($2 < \"2.1\")}'" \
 if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
 	"set -g mouse on ;"
 
+# Theme
+set-option -g status-position bottom
+set-window-option -g xterm-keys on
+set-option -g status-fg white
+set-option -g status-bg default
+set-option -g status-attr default
+set-window-option -g window-status-fg "#666666"
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr default
+set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr default
+set-option -g message-fg white
+set-option -g message-bg default
+set-option -g message-attr bright
+set -g status-left " "
+set -g status-justify left
+setw -g window-status-format		' #W '
+setw -g window-status-current-format	' #W '
+set -g status-right " "
+
 # Window automatic renaming
 set-option -g allow-rename off
+
+set-window-option -g status-left-fg white
+set-window-option -g status-left-bg default
+set-window-option -g status-left-fg white
+set-window-option -g status-left-bg default
+set -g status-right 'Session: #S | #(exec tmux ls| wc -l ) sessions running'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
