Fixed tmux index

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,10 @@ set -sg escape-time 1
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Set the numering of windows to go from 1 instead of 0
+set-option -g base-index 1
+set-option -g pane-base-index 1
+
 # Enable mouse for different versions of tmux
 # (If 'awk'exits with status 0, 'if-shell'evaluates to true)
 # tmux < v2.1:
