added zoom indicator

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ set -g status-right " "
 set-option -g allow-rename off
 
 set-window-option -g status-left-style fg=white
-set -g status-right 'Session: #S | #(exec tmux ls| wc -l ) sessions running'
+set -g status-right '#{?window_zoomed_flag,🔍, } Session: #S | #(exec tmux ls| wc -l ) sessions running'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
