--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,21 +11,21 @@ set -g status-fg white
 # command delay? We don't want that, make it short
 set -sg escape-time 1
 
+# Set the numbering of windows to go from 1 instead of 0
+set-option -g base-index 1
+setw -g pane-base-index 1
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Set the numering of windows to go from 1 instead of 0
-set-option -g base-index 1
-set-option -g pane-base-index 1
 
 # Enable mouse for different versions of tmux
-# (If 'awk'exits with status 0, 'if-shell'evaluates to true)
+# (If 'awk' exits with status 0, 'if-shell' evaluates to true)
 # tmux < v2.1:
 if-shell "tmux -V | awk '{exit !($2 < \"2.1\")}'" \
-	"setw -g mode-mouse on ; set -g mouse-select-pane on ; set -g mouse-resize-pane on ; set -g mouse-select-window on ;"
+    "setw -g mode-mouse on ; set -g mouse-select-pane on ; set -g mouse-resize-pane on ; set -g mouse-select-window on ;"
 # tmux >= v2.1:
 if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
-	"set -g mouse on ;"
+    "set -g mouse on ;"
 
 # Theme
 set-option -g status-position bottom
@@ -49,11 +49,11 @@ set -g status-right '#{?window_zoomed_flag,🔍, } Session: #S | #(exec tmux ls|
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
